--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Omar <omarucolombari@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
+  }
 }
