--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "Omar <omarucolombari@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "start": "node dist/server.js"
+  },
   "dependencies": {
     "express": "^4.18.1"
   },
