--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored"
   },
   "dependencies": {
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/node": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "ts-node-dev": "^2.0.0",
