--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored"
   },
   "dependencies": {
+    "@prisma/client": "4.3.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "prisma": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
