--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "Omar <omarucolombari@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --inspect --exit-child --ignore-watch node_modules src/server.ts",
     "start": "node dist/server.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored"
   },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "4.3.1",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -22,6 +27,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "prisma": "^4.3.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
