--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
