--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
